* Enhancement - Enable/Disable log.
* Feature - Divider field added.
* Fix - Success message issue with default form due to redirection.
* Fix - Missing Default values for fields in form builder area.
* Fix - Ajax Form Submission Smart Tag Not Working.
* Enhancement - Row clone option added.
* Fix - Format Email Message Content for Images and Files uploads.

= 1.7.4 - 11-03-2021 =
* Fix - Hide empty select data field from entry view.
* Fix - Undefined variable `form_id` on form restriction.
* Fix - jQuery deprecated shorthands shown by jQuery Migrate.
* Fix - Heartbeat notification mangled with display inline-block.
* Fix - Display successful form submission message in preview mode.
* Fix - Entries pictorial design issue and top spacing of search field.
* Fix - Perfect scrollbar throwing uncaught update property due to timeout.
* Fix - Custom and external redirect when Stripe payment form is AJAX enabled.
* Fix - Check valid hash and process custom redirection or success notice after PayPal Payment.
* Tweak - Added navigation design for tools page.
* Tweak - Payment Detail spacing on premium feature.
* Tweak - Adapt WPML config for no duplicates validation.
* Tweak - Implement hooks for field option output so they can be mangled with setting choice.
* Tweak - Load full version of `selectWoo` so if other plugin overloads it provides features.

= 1.7.3 - 26-01-2021 =
* Fix - Dropdown field empty value should not be send in email.
* Fix - Uppercase meta key in form field display empty entry list table column.
* Fix - Form Templates plan name not displayed properly on navigation tab switch.
* Fix - On AJAX form save, don't compile form stylesheet if it was not previously generated.
* Fix - Lifetime plan displaying upgrade plan and not allowing to import form from templates.
* Fix - Image Projector plugin conflicting with multi-part add-on with `colorpick` script handle.
* Tweak - Spacing issue on multi select in admin pages.